// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NeonHeader renders fallback with drupalCSSLoaded prop and error NeonContext state 1`] = `
<header
  className="makeStyles-unstickyHeader-3"
  id="header"
>
  <div>
    MOCK-FALLBACK-DRUPAL-HEADER-HTML
  </div>
</header>
`;

exports[`NeonHeader renders with drupalCssLoaded prop and success NeonContext state 1`] = `
<header
  className="makeStyles-unstickyHeader-3"
  id="header"
>
  <div>
    test drupal html
  </div>
</header>
`;

exports[`NeonHeader renders with drupalCssLoaded prop, success NeonContext state, and core auth 1`] = `
<header
  className="makeStyles-unstickyHeader-3"
  id="header"
>
  <div>
    test drupal html
  </div>
</header>
`;

exports[`NeonHeader renders with no props and active/fetching NeonContext state 1`] = `
<header
  className="makeStyles-skeletonHeader-1"
  id="header"
>
  <span
    className="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse"
    style={
      Object {
        "height": "125px",
        "width": "100%",
      }
    }
  />
</header>
`;

exports[`NeonHeader renders with no props and error NeonContext state 1`] = `
<header
  className="makeStyles-skeletonHeader-1"
  id="header"
>
  <span
    className="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse"
    style={
      Object {
        "height": "125px",
        "width": "100%",
      }
    }
  />
</header>
`;

exports[`NeonHeader renders with no props and inactive NeonContext state 1`] = `
<div
  className="makeStyles-root-4"
  data-selenium="neon-header"
>
  <header
    className="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorSecondary MuiPaper-elevation2"
    data-selenium="neon-utility-bar"
  >
    <div
      className="MuiTabs-root makeStyles-root-5"
    >
      <div
        className="MuiTabs-scroller MuiTabs-fixed"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": null,
            "overflow": "hidden",
          }
        }
      >
        <div
          className="MuiTabs-flexContainer makeStyles-flexContainer-7"
          onKeyDown={[Function]}
          role="tablist"
        >
          <a
            aria-disabled={false}
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root makeStyles-root-8 MuiTab-textColorInherit makeStyles-textColorInherit-10"
            href="https://neonscience.org"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
          >
            <span
              className="MuiTab-wrapper"
            >
              Neon Science
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </a>
          <a
            aria-disabled={false}
            aria-selected={true}
            className="MuiButtonBase-root MuiTab-root makeStyles-root-8 MuiTab-textColorInherit makeStyles-textColorInherit-10 Mui-selected makeStyles-selected-9"
            href="https://data.neonscience.org/home"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={0}
          >
            <span
              className="MuiTab-wrapper"
            >
              Data Portal
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </a>
          <a
            aria-disabled={false}
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root makeStyles-root-8 MuiTab-textColorInherit makeStyles-textColorInherit-10"
            href="https://biorepo.neonscience.org/portal/index.php"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
          >
            <span
              className="MuiTab-wrapper"
            >
              Biorepository
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </a>
        </div>
        <span
          className="PrivateTabIndicator-root-11 PrivateTabIndicator-colorSecondary-13 MuiTabs-indicator makeStyles-indicator-6"
          style={
            Object {
              "left": 0,
              "width": 0,
            }
          }
        />
      </div>
    </div>
  </header>
  <div
    className="neon-menu__container"
    data-selenium="neon-menu"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-around"
    />
  </div>
  <hr
    className="MuiDivider-root"
  />
</div>
`;

exports[`NeonHeader renders with no props and success NeonContext state 1`] = `
<header
  className="makeStyles-skeletonHeader-1"
  id="header"
>
  <span
    className="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse"
    style={
      Object {
        "height": "125px",
        "width": "100%",
      }
    }
  />
</header>
`;
